# dotfile-manager

./: .gitignore  :w  CMakeLists.txt  README.md  main.cpp
src/: configs.cpp  menu.cpp
src/headers/: configs.h  menu.h
