cmake_minimum_required(VERSION 3.16)
project(main)
add_library(menu src/menu.cpp)
add_library(configs src/configs.cpp)
add_executable(dotman main.cpp)
target_link_directories(menu PUBLIC src/headers/menu.h)
target_link_directories(menu PUBLIC src/headers/directories.h)
target_link_libraries(dotman PRIVATE menu)
target_link_libraries(dotman PRIVATE configs)
